--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             <h2 class="section-title">Who I am</h2>
             <div class="about-grid fade-in">
                 <div class="profile-img-area">
-                    <img src="https://photos.google.com/photo/AF1QipP-XVTwE17z0Uok2s1OI_P_UW7rxgcwUUqCOTrH" class="profile-img">
+                    <img src="https://photos.google.com/photo/AF1QipP-XVTwE17z0Uok2s1OI_P_UW7rxgcwUUqCOTrH">
                 </div>
                 <div class="about-text">
                     <h3>行政書士 徳永 良雄</h3>
