--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             <h2 class="section-title">Who I am</h2>
             <div class="about-grid fade-in">
                 <div class="profile-img-area">
-                    <img src="https://photos.google.com/photo/AF1QipP-XVTwE17z0Uok2s1OI_P_UW7rxgcwUUqCOTrH">
+                    <img src="https://photos.fife.usercontent.google.com/pw/AP1GczNGaE1ZUl8HmYWwUhBZanxxYgFrwGk0Trnpp7UUFdpGyhg1qHCJx_s=w869-h869-s-no-gm?authuser=0" alt="徳永良雄 プロフィール画像" class="profile-img">
                 </div>
                 <div class="about-text">
                     <h3>行政書士 徳永 良雄</h3>
