--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ footer{
 <body>
 
 <header>
-<strong>德永良雄 行政書士事務所</strong>
+<strong>德永 行政書士事務所</strong>
 <nav aria-label="メインナビゲーション">
     <a href="#profile">事務所概要</a>
     <a href="#business">業務内容</a>
@@ -161,8 +161,8 @@ footer{
 <section class="hero">
 <div>
 <h1>
-誠意をもってご相談に対応いたします<br>
-「これって聞いていいのかな？」からでも大丈夫です
+神戸の行政書士です<br>
+誠意をもってご相談に対応いたします
 </h1>
 <div class="box">
 <p><strong>まずはお話をお聞かせください</strong></p>
@@ -171,8 +171,8 @@ footer{
 そんな段階からでも、お気軽にご連絡ください。
 </p>
 <p>
-TEL：090-0000-0000<br>
-Mail：example@mail.com
+TEL：070-9192-2524<br>
+Mail：info@second-penguin.com
 </p>
 <a href="#contact" class="btn">相談してみる</a>
 <p class="notice">
@@ -204,7 +204,7 @@ Googleマップで見る
 <div class="photo">写真掲載予定</div>
 <div>
 <p>
-国家公務員として31年間勤務した後、2024年12月より行政書士として活動を始めました。<br>
+国家公務員として31年間勤務した後、2024年12月より神戸で行政書士として活動を始めました。<br>
 これまで、許認可申請、在留資格認定申請、相続に関するご相談などをお受けしてきました。<br><br>
 「専門的なことを、できるだけわかりやすく」を心がけ、  
 相談してよかったと思っていただける対応を大切にしています。
@@ -216,8 +216,8 @@ Googleマップで見る
 <section id="business" style="background:var(--bg);">
 <h2>主な取扱業務</h2>
 <ul style="max-width:700px;margin:auto;">
-<li>建設業許可申請（新規・更新・業種追加）</li>
-<li>在留資格申請（取得・変更・更新）</li>
+<li>建設業の開発許可申請（大規模開発、発電）</li>
+<li>在留資格申請（認可・変更）</li>
 <li>相続に関する手続きや書類作成のご相談</li>
 </ul>
 <p class="notice" style="text-align:center;">
