--- a/index.html
+++ b/index.html
@@ -4,152 +4,196 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>行政書士法人 サポートオフィス | 徳永良雄行政書士事務所</title>
-    <style>
-        :root {
-            --primary: #003366;
-            --secondary: #f0f4f8;
-            --accent: #d35400;
-            --text-dark: #333;
-            --text-light: #555;
-            --white: #ffffff;
-            --border: #e1e8ed;
-        }
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600;700&display=swap" rel="stylesheet">
 
-        body {
-            font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
-            line-height: 1.7;
-            color: var(--text-dark);
-            margin: 0;
-            padding: 0;
-            background-color: #fdfdfd;
-        }
+<style>
+:root {
+    --primary: #0b3d5c;
+    --accent: #f5a623;
+    --bg-light: #f4f7fa;
+    --text-main: #222;
+    --text-sub: #555;
+    --white: #ffffff;
+    --border: #e5eaf0;
+}
 
-        /* Header */
-        header {
-            background-color: var(--primary);
-            color: var(--white);
-            padding: 2.5rem 1rem;
-            text-align: center;
-        }
-        header h1 { margin: 0; font-size: 1.8rem; letter-spacing: 1px; }
-        header p { margin: 0.5rem 0 0; opacity: 0.9; font-size: 1rem; }
+/* Base */
+body {
+    font-family: 'Noto Sans JP', sans-serif;
+    margin: 0;
+    padding: 0;
+    background: var(--bg-light);
+    color: var(--text-main);
+    line-height: 1.8;
+}
 
-        /* Navigation */
-        nav {
-            background: var(--white);
-            border-bottom: 1px solid var(--border);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            padding: 0.8rem;
-        }
-        nav a {
-            text-decoration: none;
-            color: var(--primary);
-            margin: 0.3rem 1rem;
-            font-weight: bold;
-            font-size: 0.9rem;
-        }
-        nav a:hover { text-decoration: underline; }
+/* Header */
+header {
+    background: var(--primary);
+    color: white;
+    padding: 3rem 1rem;
+    text-align: center;
+}
+header h1 {
+    margin: 0;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+header p {
+    margin-top: 0.5rem;
+    opacity: 0.85;
+}
 
-        /* Hero Section */
-        .hero {
-            background: linear-gradient(135deg, #003366 0%, #005bb5 100%);
-            color: white;
-            text-align: center;
-            padding: 5rem 1rem;
-        }
-        .hero h2 { font-size: 1.8rem; margin-bottom: 1.5rem; line-height: 1.5; border: none; }
-        .hero p { font-size: 1.1rem; margin-bottom: 2rem; }
-        .hero .btn {
-            background: var(--accent);
-            color: white;
-            padding: 1rem 2rem;
-            text-decoration: none;
-            border-radius: 4px;
-            font-weight: bold;
-            font-size: 1.1rem;
-            transition: background 0.3s;
-        }
-        .hero .btn:hover { background: #e67e22; }
+/* Navigation */
+nav {
+    background: white;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1rem;
+    border-bottom: 1px solid var(--border);
+    font-weight: 600;
+}
+nav a {
+    text-decoration: none;
+    color: var(--primary);
+    font-size: 0.95rem;
+}
+nav a:hover {
+    color: var(--accent);
+}
 
-        .container { max-width: 1100px; margin: auto; padding: 3rem 1.5rem; }
+/* Hero */
+.hero {
+    background: linear-gradient(135deg, var(--primary), #145a86);
+    color: white;
+    text-align: center;
+    padding: 4rem 1rem;
+}
+.hero h2 {
+    font-size: 1.9rem;
+    margin-bottom: 1.5rem;
+}
+.hero p {
+    font-size: 1.1rem;
+    opacity: 0.9;
+}
+.hero .btn {
+    display: inline-block;
+    margin-top: 1.5rem;
+    background: var(--accent);
+    color: white;
+    padding: 0.9rem 2rem;
+    border-radius: 30px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.3s;
+}
+.hero .btn:hover {
+    background: #ffb84d;
+}
 
-        section { margin-bottom: 5rem; }
-        h2 {
-            font-size: 1.6rem;
-            color: var(--primary);
-            border-left: 6px solid var(--primary);
-            padding-left: 1rem;
-            margin-bottom: 2rem;
-        }
-        h3 { color: var(--primary); border-bottom: 1px solid var(--border); padding-bottom: 0.5rem; margin-top: 2rem; }
+/* Container */
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 4rem 1.5rem;
+}
 
-        /* Profile */
-        .profile-container { display: flex; gap: 3rem; flex-wrap: wrap; }
-        .profile-main { flex: 1; min-width: 300px; }
-        .profile-sub { flex: 1; min-width: 300px; background: var(--secondary); padding: 1.5rem; border-radius: 8px; }
-        .profile-sub ul { padding-left: 1.2rem; }
-        .profile-sub li { margin-bottom: 0.5rem; }
+/* Section */
+section {
+    margin-bottom: 4rem;
+}
+h2 {
+    font-size: 1.6rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    position: relative;
+}
+h2::after {
+    content: "";
+    width: 60px;
+    height: 3px;
+    background: var(--accent);
+    display: block;
+    margin: 0.7rem auto 0;
+}
 
-        /* Services & Pricing Cards */
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 1.5rem; }
-        .card {
-            background: var(--white);
-            border: 1px solid var(--border);
-            padding: 1.5rem;
-            border-radius: 8px;
-            transition: transform 0.2s;
-        }
-        .card:hover { transform: translateY(-5px); box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
-        .price-tag { color: var(--accent); font-size: 1.4rem; font-weight: bold; display: block; margin: 1rem 0; }
-        .card ul { padding-left: 1.2rem; font-size: 0.95rem; color: var(--text-light); }
+/* Cards */
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    gap: 2rem;
+}
+.card {
+    background: white;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 6px 18px rgba(0,0,0,0.04);
+    transition: 0.3s;
+}
+.card:hover {
+    transform: translateY(-6px);
+}
+.price-tag {
+    color: var(--accent);
+    font-size: 1.5rem;
+    font-weight: bold;
+}
 
-        /* Testimonials */
-        .testimonial-item {
-            background: #fff;
-            border-right: 4px solid var(--primary);
-            border-left: 4px solid var(--primary);
-            padding: 1.5rem;
-            margin-bottom: 1.5rem;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.03);
-        }
-        .testimonial-name { font-weight: bold; display: block; margin-top: 1rem; color: var(--primary); }
+/* Profile */
+.profile-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+.profile-sub {
+    background: white;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.03);
+}
 
-        /* Info Table */
-        .info-table { width: 100%; border-collapse: collapse; margin-top: 1rem; background: white; }
-        .info-table th, .info-table td { padding: 1rem; border: 1px solid var(--border); text-align: left; }
-        .info-table th { background: #f9f9f9; width: 25%; color: var(--primary); }
+/* Table */
+.info-table {
+    width: 100%;
+    border-collapse: collapse;
+    background: white;
+    border-radius: 12px;
+    overflow: hidden;
+}
+.info-table th,
+.info-table td {
+    padding: 1rem;
+    border-bottom: 1px solid var(--border);
+}
+.info-table th {
+    background: #f8fafc;
+    width: 30%;
+    text-align: left;
+}
 
-        /* Links Section */
-        .links-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 2rem; }
-        .link-group h4 { margin-bottom: 0.8rem; color: var(--primary); font-size: 1rem; }
-        .link-group ul { list-style: none; padding: 0; }
-        .link-group li { margin-bottom: 0.4rem; }
-        .link-group a { text-decoration: none; color: #0066cc; font-size: 0.9rem; }
-        .link-group a:hover { text-decoration: underline; }
+/* Footer */
+footer {
+    background: var(--primary);
+    color: white;
+    padding: 3rem 1rem;
+    text-align: center;
+}
+footer p {
+    opacity: 0.85;
+    margin: 0.5rem 0;
+}
 
-        /* Footer */
-        footer {
-            background: #222;
-            color: #ccc;
-            padding: 3rem 1rem;
-            text-align: center;
-            font-size: 0.9rem;
-        }
-        footer p { margin: 0.5rem 0; }
-        .footer-contacts { margin-bottom: 1.5rem; color: white; }
+/* Responsive */
+@media (max-width: 768px){
+    .profile-container {
+        flex-direction: column;
+    }
+}
+</style>
 
-        @media (max-width: 600px) {
-            header h1 { font-size: 1.4rem; }
-            .hero h2 { font-size: 1.4rem; }
-            .info-table th, .info-table td { display: block; width: 100%; box-sizing: border-box; }
-            .info-table th { border-bottom: none; }
-        }
-    </style>
 </head>
 <body>
 
