--- a/index.html
+++ b/index.html
@@ -192,6 +192,60 @@ footer p {
         flex-direction: column;
     }
 }
+/* Contact Form */
+.contact-form {
+    background: white;
+    padding: 2rem;
+    margin-top: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.04);
+}
+
+.contact-form .form-group {
+    margin-bottom: 1.5rem;
+}
+
+.contact-form label {
+    display: block;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.contact-form input,
+.contact-form textarea {
+    width: 100%;
+    padding: 0.8rem;
+    border-radius: 6px;
+    border: 1px solid var(--border);
+    font-size: 1rem;
+}
+
+.contact-form textarea {
+    resize: vertical;
+    min-height: 150px;
+}
+
+.contact-form button {
+    background: var(--accent);
+    color: white;
+    border: none;
+    padding: 0.9rem 2rem;
+    border-radius: 30px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.contact-form button:hover {
+    background: #ffb84d;
+}
+
+.privacy-note {
+    font-size: 0.85rem;
+    margin-top: 1rem;
+    color: var(--text-sub);
+}
+
 </style>
 
 </head>
@@ -362,6 +416,45 @@ footer p {
                 <td>2024年12月開業 / 日本行政書士連合会 第24303656号 [2]</td>
             </tr>
         </table>
+<div class="contact-form">
+    <h3 style="margin-top:0;">お問い合わせフォーム</h3>
+    <form action="mailto:info@tokunaga-gyosei.jp" method="post" enctype="text/plain">
+        
+        <div class="form-group">
+            <label for="name">お名前（必須）</label>
+            <input type="text" id="name" name="お名前" required>
+        </div>
+
+        <div class="form-group">
+            <label for="email">メールアドレス（必須）</label>
+            <input type="email" id="email" name="メールアドレス" required>
+        </div>
+
+        <div class="form-group">
+            <label for="phone">電話番号（任意）</label>
+            <input type="tel" id="phone" name="電話番号">
+        </div>
+
+        <div class="form-group">
+            <label for="message">お問い合わせ内容（必須）</label>
+            <textarea id="message" name="お問い合わせ内容" required></textarea>
+        </div>
+
+        <div class="form-group">
+            <label>
+                <input type="checkbox" required>
+                送信することで個人情報の取扱いに同意したものとみなします。
+            </label>
+        </div>
+
+        <button type="submit">送信する</button>
+
+        <p class="privacy-note">
+            ※内容確認後、通常1営業日以内にご返信いたします。
+        </p>
+    </form>
+</div>
+
     </section>
 
     <!-- Links Section -->
