--- a/index.html
+++ b/index.html
@@ -677,45 +677,18 @@ section {
     <section id="contact" class="bg-light-section">
     <div class="container">
         <h2>お問い合わせ</h2>
-       
-<div class="contact-form">
-    <h3 style="margin-top:0;">お問い合わせフォーム</h3>
-    <form action="mailto:info@tokunaga-gyosei.jp" method="post" enctype="text/plain">
-        
-        <div class="form-group">
-            <label for="name">お名前（必須）</label>
-            <input type="text" id="name" name="お名前" required>
-        </div>
+    <div class="contact-form">
+    <iframe 
+        src="https://docs.google.com/forms/d/e/https://docs.google.com/forms/d/e/<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeJPYhr5yeNR1IyZvTHCWVO5s_os7ff83NjhB02nPmMgARSmA/viewform?embedded=true" width="640" height="1138" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>/viewform?embedded=true" 
+        width="100%" 
+        height="800" 
+        frameborder="0" 
+        marginheight="0" 
+        marginwidth="0">
+        読み込んでいます…
+    </iframe>
+</div>   
 
-        <div class="form-group">
-            <label for="email">メールアドレス（必須）</label>
-            <input type="email" id="email" name="メールアドレス" required>
-        </div>
-
-        <div class="form-group">
-            <label for="phone">電話番号（任意）</label>
-            <input type="tel" id="phone" name="電話番号">
-        </div>
-
-        <div class="form-group">
-            <label for="message">お問い合わせ内容（必須）</label>
-            <textarea id="message" name="お問い合わせ内容" required></textarea>
-        </div>
-
-        <div class="form-group">
-            <label>
-                <input type="checkbox" required>
-                送信することで個人情報の取扱いに同意したものとみなします。
-            </label>
-        </div>
-
-        <button type="submit">送信する</button>
-
-        <p class="privacy-note">
-            ※内容確認後、通常1営業日以内にご返信いたします。
-        </p>
-    </form>
-</div>
 </div>
     </section>
 
