--- a/index.html
+++ b/index.html
@@ -678,15 +678,9 @@ section {
     <div class="container">
         <h2>お問い合わせ</h2>
    <div class="contact-form">
-    <iframe 
-        src="https://docs.google.com/forms/d/e/1FAIpQLSeJPYhr5yeNR1IyZvTHCWVO5s_os7ff83NjhB02nPmMgARSmA/viewform?embedded=true"
-        width="100%"
-        height="800"
-        frameborder="0"
-        marginheight="0"
-        marginwidth="0">
-        読み込んでいます…
-    </iframe>
+   
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeJPYhr5yeNR1IyZvTHCWVO5s_os7ff83NjhB02nPmMgARSmA/viewform?embedded=true" width="640" height="1138" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+
 </div>
 
 </div>
