--- a/index.html
+++ b/index.html
@@ -682,7 +682,12 @@ section {
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeJPYhr5yeNR1IyZvTHCWVO5s_os7ff83NjhB02nPmMgARSmA/viewform?embedded=true" width="640" height="1138" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
 
 </div>
-
+<p style="font-size:14px; color:#666; margin-top:20px;">
+※本フォームはGoogleフォームを利用しています。<br>
+※ご入力いただいた個人情報は、当事務所の
+<a href="privacy.html" target="_blank">プライバシーポリシー</a>
+に基づき適切に管理いたします。
+</p>
 </div>
     </section>
 
