--- a/index.html
+++ b/index.html
@@ -235,6 +235,11 @@ h2::after {
     text-align: left;
 }
 
+.form-wrapper {
+  max-width: 700px;   /* ← 好みで600〜800に調整 */
+  margin: 0 auto;     /* 中央寄せ */
+}
+
 /* Footer */
 footer {
     background: var(--primary);
@@ -678,8 +683,13 @@ section {
     <div class="container">
         <h2>お問い合わせ</h2>
    <div class="contact-form">
-   
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeJPYhr5yeNR1IyZvTHCWVO5s_os7ff83NjhB02nPmMgARSmA/viewform?embedded=true" width="640" height="1138" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+  
+<div class="form-wrapper">
+  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeJPYhr5yeNR1IyZvTHCWVO5s_os7ff83NjhB02nPmMgARSmA/viewform?embedded=true"
+  width="100%"
+  height="1100"
+  frameborder="0"></iframe>
+</div>
 
 </div>
 <p style="font-size:14px; color:#666; margin-top:20px;">
