--- a/index.html
+++ b/index.html
@@ -374,28 +374,30 @@ section {
     scroll-margin-top: 100px;
 }
 /* --- Second Penguin Highlight --- */
-/* --- Second Penguin Highlight (Improved) --- */
 .second-penguin-box {
     margin-top: 2rem;
-    padding: 1.5rem;
-    background: linear-gradient(135deg, var(--accent), #ffb84d);
+    padding: 1.2rem 1.5rem;
+    background: #7a1f2b;   /* 濃いえんじ */
     color: white;
-    border-radius: 12px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
 }
 
-.sp-title {
-    font-weight: 700;
-    font-size: 1.1rem;
+/* 1行目 */
+.sp-text {
+    font-weight: 600;
+    font-size: 1rem;
     margin-bottom: 0.6rem;
 }
 
+/* 2行目ボタン */
 .sp-link {
     display: inline-block;
     background: white;
-    color: var(--primary);
+    color: #7a1f2b;
     font-weight: 700;
-    padding: 0.6rem 1.4rem;
+    padding: 0.5rem 1.6rem;
     border-radius: 30px;
     text-decoration: none;
     font-size: 0.95rem;
@@ -403,21 +405,7 @@ section {
 }
 
 .sp-link:hover {
-    background: var(--primary);
-    color: white;
-}
-
-.sp-note {
-    font-size: 0.75rem;
-    margin-top: 0.5rem;
-    opacity: 0.9;
-}
-
-/* PCでは2行固定 */
-@media (min-width: 769px){
-    .second-penguin-box {
-        max-width: 520px;
-    }
+    background: #f5f5f5;
 }
 /* ハンバーガー */
 .hamburger {
@@ -564,20 +552,16 @@ footer a:hover {
             </div>
         </div>
 
-     <div class="second-penguin-box">
-    <div class="sp-title">
-        外国人雇用・支援事業のご案内
+   <div class="second-penguin-box">
+    <div class="sp-text">
+        外国人雇用・生活支援の専門サイトはこちら →
     </div>
 
     <a href="https://second-penguin-lanning.github.io/SP-Main-Website/" 
        target="_blank" 
        class="sp-link">
-       セコンドペンギン企画 公式サイトを見る
+       セコンドペンギン企画 公式サイト
     </a>
-
-    <div class="sp-note">
-        ※外国人雇用・生活支援専門サイト（別ページ）
-    </div>
 </div>
     </div>
  <!-- 写真 -->
