Update link in index.html to new URL

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ footer a:hover {
         【ご案内】 外国人雇用・生活支援の事業はこちら →
     </div>
 
-    <a href="https://second-penguin-lanning.github.io/SP-Main-Website/" 
+    <a href="https://tokunaga-gyosei.jp/" 
        target="_blank" 
        class="sp-link">
        セコンドペンギン企画 公式サイト
