--- a/index.html
+++ b/index.html
@@ -482,6 +482,20 @@ footer a {
 footer a:hover {
     color: var(--accent);
 }
+/* 業務用リンク */
+.header-nav a.business-link {
+    font-size: 0.75rem;
+    font-weight: 400;
+    opacity: 0.6;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.header-nav a.business-link:hover {
+    opacity: 1;
+    color: var(--accent);
+}
 </style>
 
 </head>
@@ -509,6 +523,11 @@ footer a:hover {
         <a href="#office">事務所情報</a>
         <a href="#contact">お問い合わせ</a>
         <a href="#links">関係リンク</a>
+<a href="https://second-penguin-planning.github.io/member/" 
+   target="_blank" 
+   class="business-link">
+   🔒 業務用
+</a>
     </nav>
 </header>
 
