--- a/index.html
+++ b/index.html
@@ -736,31 +736,19 @@ footer a:hover {
 <div class="contact-form">
     <h3 style="margin-top:0;">お問い合わせフォーム</h3>
 
-   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeJPYhr5yeNR1IyZvTHCWVO5s_os7ff83NjhB02nPmMgARSmA/viewform?embedded=true" width="640" height="855" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+    <iframe 
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeJPYhr5yeNR1IyZvTHCWVO5s_os7ff83NjhB02nPmMgARSmA/viewform?embedded=true" 
+        width="100%" 
+        height="900" 
+        frameborder="0" 
+        marginheight="0" 
+        marginwidth="0">
+        読み込んでいます…
+    </iframe>
 
     <p class="privacy-note">
     ※通常1営業日以内にご返信いたします。
     </p>
-</div>
-<div class="form-group">
-    <label>
-        <input type="checkbox" required>
-        <a href="private.html" target="_blank">
-            プライバシーポリシー
-        </a>
-        に同意の上、送信します。
-    </label>
-</div>
-
-        <button type="submit">送信する</button>
-
-    <p class="privacy-note">
-    ※内容確認後、通常1営業日以内にご返信いたします。<br>
-    個人情報の取扱いについては
-    <a href="private.html" target="_blank">プライバシーポリシー</a>
-    をご確認ください。
-</p>
-    </form>
 </div>
 </div>
     </section>
