--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@ header {
 }
 
 .hero-left {
-    flex: 2;  /* 2/3 */
-    text-align: left;
+    flex: 2;                 /* 2/3 */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* 縦方向中央 */
+    align-items: center;     /* 横方向中央 */
+    text-align: center;      /* 文字中央 */
 }
 
 .hero-left h2 {
@@ -619,16 +623,14 @@ footer a:hover {
         </div>
 
         <!-- 右 1/3 -->
-        <div class="hero-right">
-            <div class="info-box">
-                <h3>情報のご提供</h3>
-
-                <a href="#">
-                    2026年の蓄電池の補助金について
-                </a>
-
-            </div>
-        </div>
+       <div class="hero-right">
+    <div class="info-box">
+        <h3>情報のご提供</h3>
+        <a href="subsidy_battery.html">
+            2026年の蓄電池の補助金について
+        </a>
+    </div>
+</div>
 
     </div>
 </section>
