Remove citation tags from subsidy_battery.html

--- a/subsidy_battery.html
+++ b/subsidy_battery.html
@@ -70,12 +70,12 @@
 <div class="container">
     <a href="index.html" class="back-link">← 事務所サイトへ戻る</a>
 
-    <h1>2026年の蓄電池の補助金について [cite: 1]</h1>
-    <p><strong>～賢く選ぶための最新ガイド：国・自治体の支援と海外製モデルの活用～ [cite: 2]</strong></p>
+    <h1>2026年の蓄電池の補助金について</h1>
+    <p><strong>～賢く選ぶための最新ガイド：国・自治体の支援と海外製モデルの活用～</strong></p>
 
-    <p>2026年現在、脱炭素社会の実現に向けて蓄電池の導入支援は続いています。特に「電力の自給自足」や「災害時の備え」を目的とした家庭への補助金が充実しています。 [cite: 3]</p>
+    <p>2026年現在、脱炭素社会の実現に向けて蓄電池の導入支援は続いています。特に「電力の自給自足」や「災害時の備え」を目的とした家庭への補助金が充実しています。</p>
 
-    <h2>1. 【2026年度】国が実施する主要補助金リスト [cite: 4]</h2>
+    <h2>1. 【2026年度】国が実施する主要補助金リスト</h2>
     <table>
         <thead>
             <tr>
@@ -87,50 +87,50 @@
         </thead>
         <tbody>
             <tr>
-                <td>DR補助金 [cite: 6]</td>
-                <td>一番人気。電力が足りない時に放電協力（DR）をすることが条件。 [cite: 6]</td>
-                <td>最大 60万円 [cite: 6]</td>
-                <td>環境共創イニシアチブ(SII) [cite: 6]</td>
+                <td>DR補助金</td>
+                <td>一番人気。電力が足りない時に放電協力（DR）をすることが条件。</td>
+                <td>最大 60万円</td>
+                <td>環境共創イニシアチブ(SII) </td>
             </tr>
             <tr>
-                <td>ZEH支援事業 [cite: 6]</td>
-                <td>高断熱・省エネな新築住宅を建てる際に蓄電池を追加。 [cite: 6]</td>
-                <td>2万円/kWh (上限20万円) [cite: 6]</td>
-                <td>環境共創イニシアチブ(SII) [cite: 6]</td>
+                <td>ZEH支援事業 </td>
+                <td>高断熱・省エネな新築住宅を建てる際に蓄電池を追加。</td>
+                <td>2万円/kWh (上限20万円)</td>
+                <td>環境共創イニシアチブ(SII) </td>
             </tr>
             <tr>
-                <td>みらいエコ住宅2026 [cite: 6]</td>
-                <td>リフォーム時に対象。子育て世帯以外も利用可能。 [cite: 6]</td>
-                <td>一律 64,000円/戸 [cite: 6]</td>
-                <td>国土交通省 [cite: 6]</td>
+                <td>みらいエコ住宅2026 </td>
+                <td>リフォーム時に対象。子育て世帯以外も利用可能。</td>
+                <td>一律 64,000円/戸 </td>
+                <td>国土交通省 </td>
             </tr>
         </tbody>
     </table>
 
-    <h2>2. 地域密着（兵庫・大阪）の補助金 [cite: 7]</h2>
-    <p>自治体の補助金は、国の補助金と併用できるのが最大の魅力です。 [cite: 8]</p>
+    <h2>2. 地域密着（兵庫・大阪）の補助金 </h2>
+    <p>自治体の補助金は、国の補助金と併用できるのが最大の魅力です。</p>
     <ul>
-        <li><strong>兵庫県全域:</strong> 太陽光とセット導入で最大 35万円 の補助。 [cite: 10]</li>
-        <li><strong>高砂市・稲美町など:</strong> 10万円〜経費の1/3まで支援。 [cite: 12]</li>
-        <li><strong>大阪府エリア:</strong> おおさかスマートエネルギーセンターが各市町村の情報を一括案内。 [cite: 14]</li>
+        <li><strong>兵庫県全域:</strong> 太陽光とセット導入で最大 35万円 の補助。 </li>
+        <li><strong>高砂市・稲美町など:</strong> 10万円〜経費の1/3まで支援。 </li>
+        <li><strong>大阪府エリア:</strong> おおさかスマートエネルギーセンターが各市町村の情報を一括案内。</li>
         <li><strong>茨木市・摂津市など:</strong> 蓄電池単体でも補助が出る傾向。 [cite: 16]</li>
     </ul>
 
     <div class="qa-section">
-        <h2>3. 中国製蓄電池（HUAWEI・BYD）について [cite: 17, 18]</h2>
+        <h2>3. 中国製蓄電池（HUAWEI・BYD）について</h2>
         <p><strong>Q: 補助金はもらえる？</strong><br>
-        A: もらえます。条件は「メーカーの国籍」ではなく、SIIへの製品登録があるかどうかです。主要な中国製はすべて登録済みです。 [cite: 21, 22]</p>
+        A: もらえます。条件は「メーカーの国籍」ではなく、SIIへの製品登録があるかどうかです。主要な中国製はすべて登録済みです。</p>
         <div class="note-box">
-            <strong>【2026年の注意点】 [cite: 23]</strong><br>
-            輸出政策の影響で2026年4月以降、中国製品の価格が数％上昇する兆しがあります。早めの見積もりを推奨します。 [cite: 24]
+            <strong>【2026年の注意点】</strong><br>
+            輸出政策の影響で2026年4月以降、中国製品の価格が数％上昇する兆しがあります。早めの見積もりを推奨します。 
         </div>
     </div>
 
-    <h2>4. 確実に受け取るためのステップ [cite: 25]</h2>
+    <h2>4. 確実に受け取るためのステップ</h2>
     <ol>
-        <li>「登録事業者」に依頼する（DR補助金などは必須条件）。 [cite: 26, 27]</li>
-        <li>「国＋県＋市」の併用が可能か確認する。 [cite: 28, 29]</li>
-        <li><strong>工事を始める前</strong>に申請を完了させる（事後申請は不可）。 [cite: 30, 31]</li>
+        <li>「登録事業者」に依頼する（DR補助金などは必須条件）。 </li>
+        <li>「国＋県＋市」の併用が可能か確認する。</li>
+        <li><strong>工事を始める前</strong>に申請を完了させる（事後申請は不可）。</li>
     </ol>
 
     <a href="index.html#contact" class="btn-contact">補助金のシミュレーションを依頼する</a>
