Update name in header and paragraph text

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@ footer a:hover {
 <header>
 <div class="header-logo">
     <img src="gyosei_logo_192.png" alt="ペンギンロゴ">
-    <span>德永 行政書士事務所</span>
+    <span>德永 良雄 行政書士事務所</span>
 </div>
 
    <!-- ハンバーガーボタン -->
@@ -616,7 +616,7 @@ footer a:hover {
             </h2>
 
             <p>
-神戸の行政書士・徳永良雄が誠意をもってご対応いたします。
+神戸の行政書士 德永 が誠意をもってご対応いたします。
             </p>
 
             <a href="#contact" class="btn">お問い合わせはこちら</a>
